# AutoCAD_CAXA_python-lisp

./: .gitignore  COMMIT_SUMMARY.txt  LICENSE  LISP图样.dwt  MANIFEST.in  README.md  build_exe.py  drawing_operations.py  examples_caxa_compatibility.py  fixture.py  generate_lens_icon.py  geometry.py  main.py  main_gui.py  pom.py  pyproject.toml  requirements.txt  run_lens_gui.py  setup.py  simple_gui.py  wp.py  新图样.dwt
blocks/: A4图框.bak  A4图框.dwg  Drawing84.dwl  Drawing84.dwl2  Drawing85.dwl  Drawing85.dwl2  Drawing87.dwl  Drawing87.dwl2  GPMJX.dwg  GPMXJ.dwg  JZM.dwg  JZM_KC.dwg  KJ-4connecter.dwg  KJ-4connectorJZM.dwg  POM.dwg  XJJK.dwg  XJMJM.dwg  XPMJM.dwg  XSZJ.dwg  XSZJ_POM.dwg  下摆机精磨基模技术要求.dwg  修盘丸片.dwg  周凡.bak  周凡.dwg  审核模板.dwg  戴磊.dwg  王千奥.dwg  精磨丸片.dwg
calculator/: arc_angle.py  sagitta.py
dimension/: __init__.py  dia.py
draw/: D_R_ratio2K_V1.py  Tool_calculation.py  __init__.py  drawing_operations.py  geometry.py
fixture/: __init__.py  fixture.py  fixture_cu.py  fixture_gui.py  fixture_pom.py  pom.py
lens/: build_lens.py  draw_lens.py  gui_config.py  lens.py  lens_gui.py  lens_gui_data.json
lens_package/: __init__.py  draw_lens.py  lens_gui.py  lens_gui_data.json  params_storage.json
molds/: Tool_calculation.py  __init__.py  config.json  dimension.py  draw_bottom.py  draw_main_view.py  draw_molds.py  draw_top_view.py  drawing_operations.py  geometry.py  molds_gui.py  wp.py  wp_main_view.py  wp_side_view.py
test_output/: R52.704-Φ22.000.dwg
utils/: Knowledge Organization.py  __init__.py  arc_with_dimension.py  block.py  cad_factory.py  hatch.py  (+19 more)
(+18 files in other folders)
